Major additions and changes Added Dark Mode. Changed Variety selector to show all varieties (not just Megaevolutions and Gmax). Fixed bug that made clicking Next/Previous buttons (after selecting a variety) update modal to first Pokémon of the list. Minor changes to .css.

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-	background-color: #d6d6d6;
+	background-color: var(--background-color);
+	color: var(--font-color);
 }
 
 nav {
@@ -62,7 +63,7 @@ nav {
 }
 
 .searchbar {
-	margin-right: 20px;
+	margin-right: 17px;
 	flex: 1;
 	border-radius: 12px;
 }
@@ -86,6 +87,7 @@ nav {
 	border-radius: 12px;
 	color: white;
 	margin-left: 10px;
+	margin-right: 10px;
 	cursor: pointer;
 	padding: 10px;
 	font-size: 18px;
@@ -142,10 +144,10 @@ nav {
 	display: flex;
 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 12px;
-	background-color: #ffffff;
 	transition: all 0.2s ease-in-out;
 	height: 120px;
 	min-width: 320px;
+	background-color: var(--card-color);
 }
 
 .pokemon-card:hover {
@@ -198,17 +200,18 @@ nav {
 }
 
 .favorite-btn {
-	background-color: #ffffff;
+	background-color: var(--card-color);
 	border: none;
 }
 
 .favorite-heart img {
 	border-radius: 8px;
 	padding: 3px;
+	filter: var(--heart-color);
 }
 
 .favorite-heart img:hover {
-	background-color: lightgrey;
+	background-color: var(--heart-color-hover);
 	cursor: pointer;
 }
 
@@ -447,7 +450,7 @@ nav {
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	background-color: #ffffff;
+	background-color: var(--background-color);
 	transition: all 0.3s ease-in-out;
 	border-radius: 12px;
 	margin: 20px;
@@ -460,7 +463,7 @@ nav {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	background-color: #d6d6d6;
+	background-color: var(--card-color);
 	height: 50px;
 	border-radius: 12px 12px 0 0;
 	text-transform: capitalize;
@@ -499,7 +502,7 @@ nav {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	background-color: #d6d6d6;
+	background-color: var(--card-color);
 	border-radius: 12px;
 	margin: 15px;
 	font-size: 22px;
@@ -513,7 +516,14 @@ nav {
 	font-weight: 600;
 }
 
+.modal-varieties p {
+	font-size: 18px;
+	font-weight: 600;
+	text-align: center;
+}
+
 .selectVariety-box {
+	font-size: 18px;
 	font-weight: 600;
 }
 
@@ -555,14 +565,14 @@ nav {
 }
 
 .pokemon-weight {
-	background-color: #ffffff;
+	background-color: var(--background-color);
 	padding: 5px;
 	border-radius: 8px;
 	min-width: 170px;
 }
 
 .pokemon-height {
-	background-color: #ffffff;
+	background-color: var(--background-color);
 	padding: 5px;
 	border-radius: 8px;
 	min-width: 160px;
@@ -605,6 +615,7 @@ nav {
 	justify-content: space-between;
 	column-gap: 20px;
 	width: fit-content;
+	background-color: var(--card-color);
 }
 
 .stats-column {
@@ -620,6 +631,7 @@ nav {
 	justify-content: flex-start;
 	grid-gap: 20px;
 	width: fit-content;
+	background-color: var(--card-color);
 }
 
 .modal-abilities ul {
@@ -628,6 +640,7 @@ nav {
 
 .modal-about {
 	width: fit-content;
+	background-color: var(--card-color);
 }
 
 .closeIcon:hover {
@@ -757,8 +770,8 @@ nav {
 	}
 
 	.favorite-heart img {
-		width: 22px;
-		height: 20px;
+		width: 28px;
+		height: 26px;
 	}
 }
 
@@ -835,12 +848,8 @@ nav {
 		margin: 3px 2px 0 0;
 	}
 
-	.searchbar {
-		margin-right: 15px;
-	}
-
 	.searchbar-container {
-		margin-top: 10px;
+		margin-top: 5px;
 	}
 
 	.searchbar input {
@@ -943,6 +952,11 @@ nav {
 		text-transform: capitalize;
 	}
 
+	.favorite-heart img {
+		width: 24px;
+		height: 22px;
+	}
+
 	.modal-close-button {
 		font-size: 26px;
 	}
@@ -966,6 +980,15 @@ nav {
 
 	.modal-right-column div {
 		font-size: 20px;
+	}
+
+	.footer-content {
+		font-size: 18px;
+	}
+
+	.footer-heart-icon img {
+		width: 36px;
+		height: 42px;
 	}
 }
 
@@ -1075,8 +1098,13 @@ nav {
 		font-size: 20px;
 	}
 
+	.searchbar-container {
+		margin-top: 0;
+	}
+
 	.searchbar {
 		padding-right: 0px;
+		margin-right: 14px;
 	}
 
 	.searchbar input {
